# components/wso2is.key.manager.operations.endpoint/swagger.json
@@ -10,7 +10,7 @@
     }
   },
   "host" : "apim.wso2.com",
-  "basePath" : "/keymanager-operations",
+  "basePath" : "/t/{tenant-domain}/keymanager-operations",
   "schemes" : [ "https" ],
   "consumes" : [ "application/json" ],
   "produces" : [ "application/json" ],
@@ -442,9 +442,6 @@
           }
         },
         "tokenType" : {
-          "type" : "string"
-        },
-        "application_owner" : {
           "type" : "string"
         },
         "backchannel_logout_uri" : {
